--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,11 +2,15 @@
 import MainHead from '../components/MainHead.astro';
 import Footer from '../components/Footer.astro';
 import Nav from '../components/Nav.astro';
+
+const name =  'Sreelekha Guggilam';
+const nickname = 'Lekha';
+
 ---
 
 <html lang="en">
 	<head>
-		<MainHead title="About | ${name}" description="About ${name} Lorem Ipsum" />
+		<MainHead title="About | Lekha" description="About ${name} Lorem Ipsum" />
 		<style>
 			.heroImg {
 				max-height: 24rem;
@@ -32,7 +36,7 @@ import Nav from '../components/Nav.astro';
 	<body>
 		<Nav />
 		<div class="wrapper">
-			<h1>About ${name}</h1>
+			<h1>About Lekha</h1>
 			<div class="heroImg">
 				<img
 					width="1400"
