--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,7 +10,7 @@ const nickname = 'Lekha';
 
 <html lang="en">
 	<head>
-		<MainHead title="About | ${name}" description="About ${name} Lorem Ipsum" />
+		<MainHead title="About | "${nickname} description="About ${nickname} Lorem Ipsum" />
 		<style>
 			.heroImg {
 				max-height: 24rem;
@@ -46,33 +46,11 @@ const nickname = 'Lekha';
 			</div>
 			<div class="bio wrapper">
 				<p>
-					Cream cheese say cheese stinking bishop. Brie fondue hard cheese bocconcini feta camembert
-					de normandie babybel airedale. Red leicester swiss manchego mascarpone pepper jack
-					airedale fromage frais ricotta. Cheese and biscuits cauliflower cheese boursin.
-				</p>
-				<p>
-					Pepper jack cheesy feet cheese slices. Halloumi port-salut queso caerphilly roquefort
-					cheese slices cheesy feet rubber cheese. Cheese slices smelly cheese pecorino macaroni
-					cheese feta blue castello roquefort edam. Babybel pepper jack airedale cheddar fromage
-					frais manchego.
-				</p>
-				<p>
-					Cauliflower cheese lancashire macaroni cheese. Cheeseburger babybel cheese on toast
-					airedale cauliflower cheese who moved my cheese roquefort paneer. Stinking bishop cheddar
-					taleggio port-salut port-salut stinking bishop cheesy grin babybel. Blue castello feta
-					everyone loves brie.
-				</p>
-				<p>
-					Goat squirty cheese cut the cheese. Cheese and wine cheddar fondue airedale cottage cheese
-					camembert de normandie feta babybel. Rubber cheese melted cheese pecorino port-salut
-					fondue gouda cheese on toast cheesy feet. Feta edam everyone loves cheese strings
-					camembert de normandie.
-				</p>
-				<p>
-					Caerphilly monterey jack goat. Squirty cheese cheesy grin hard cheese cheese strings
-					cheese and biscuits croque monsieur smelly cheese danish fontina. Swiss cheese triangles
-					everyone loves mascarpone cheese on toast who moved my cheese lancashire cheeseburger.
-					Fromage frais fromage frais cheese and biscuits stinking bishop cauliflower cheese.
+					I an a R&D Associate in the Geospatial Artificial Intelligence (GeoAI) group within the National Security 
+					and Sciences Directorate (NSSD) at Oak Ridge National Lab (ORNL). I completed my PhD in Computational 
+					Sciences from SUNY, University at Buffalo (UB), Institute of Computational Data Sciences (ICDS). My research 
+					is in the area of unsupervised anomaly detection and open-set classification for streaming data, knowledge 
+					and data distillation for neural networks.
 				</p>
 			</div>
 		</div>
