Update header, footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,11 @@
 ---
 const currentYear = new Date().getFullYear();
+const name =  'Sreelekha Guggilam';
+const nickname = 'Lekha';
 ---
 
 <footer>
-	&copy; {currentYear} ${name}
+	&copy; {currentYear} {name}
 	<small class="byline">🚀 Built by Astro</small>
 </footer>
 <style>
