--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,7 +10,7 @@ const nickname = 'Lekha';
 
 <html lang="en">
 	<head>
-		<MainHead title="About | ${nickname}" description="About ${nickname}" />
+		<MainHead title="About | {nickname}" description="About {nickname}" />
 		<style>
 			.heroImg {
 				max-height: 24rem;
@@ -36,7 +36,7 @@ const nickname = 'Lekha';
 	<body>
 		<Nav />
 		<div class="wrapper">
-			<h1>About ${nickname}</h1>
+			<h1>About {nickname}</h1>
 			<div class="heroImg">
 				<img
 					width="1400"
