--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -1,9 +1,13 @@
 ---
 import '../styles/global.css';
+const name =  'Sreelekha Guggilam';
+const nickname = 'Lekha';
+
 const {
-	title = 'Jeanine White: Personal Site',
-	description = 'The personal site of Jeanine White',
+	title = '${name}: Personal Site',
+	description = 'The personal site of ${name}',
 } = Astro.props;
+
 ---
 
 <meta charset="UTF-8" />
