--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ const nickname = 'Lekha';
 	<head>
 		<MainHead
 			title={`${name}: Personal Site`}
-			description={`${name}: Developer, Speaker, and Writer...`}
+			description={`${name}: Statistician, Researcher, Shikamaru lover...`}
 		/>
 		<style>
 			.wrapper {
@@ -220,11 +220,10 @@ const nickname = 'Lekha';
 					<small class="subtitle">The personal site of</small>{name}
 				</h1>
 				<div class="roles">
-					<span class="role">👩‍💻 Developer <span class="invert">👩‍💻 Developer</span></span>
-					<span class="role">🎤 Speaker <span class="invert">🎤 Speaker</span></span>
-					<span class="role">✏️ Writer <span class="invert">✏️ Writer</span></span>
+					<span class="role">🎤 Statistician <span class="invert"> Statistician</span></span>
+					<span class="role">👩‍💻 Researcher <span class="invert">🎤👩‍💻 Researcher</span></span>
 				</div>
-				<p class="desc">Lover of dogs, roadtrips, and poetry.</p>
+				<p class="desc">Anime binge-watcher (Go Shikamaru!!!)</p>
 			</div>
 		</header>
 		<main class="wrapper">
