Update about and index

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -46,7 +46,7 @@ const nickname = 'Lekha';
 			</div>
 			<div class="bio wrapper">
 				<p>
-					I an a R&D Associate in the Geospatial Artificial Intelligence (GeoAI) group within the National Security 
+					I am an R&D Associate in the Geospatial Artificial Intelligence (GeoAI) group within the National Security 
 					and Sciences Directorate (NSSD) at Oak Ridge National Lab (ORNL). I completed my PhD in Computational 
 					Sciences from SUNY, University at Buffalo (UB), Institute of Computational Data Sciences (ICDS). My research 
 					is in the area of unsupervised anomaly detection and open-set classification for streaming data, knowledge 
