--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -220,7 +220,7 @@ const nickname = 'Lekha';
 					<small class="subtitle">The personal site of</small>{name}
 				</h1>
 				<div class="roles">
-					<span class="role">🎤 Statistician <span class="invert"> Statistician</span></span>
+					<span class="role">Statistician <span class="invert"> Statistician</span></span>
 					<span class="role">👩‍💻 Researcher <span class="invert">🎤👩‍💻 Researcher</span></span>
 				</div>
 				<p class="desc">Anime binge-watcher (Go Shikamaru!!!)</p>
@@ -238,9 +238,8 @@ const nickname = 'Lekha';
 				<div class="section">
 					<h3 class="sectionTitle">About me</h3>
 					<p class="bio">
-						<span>Hello!</span> I’m {nickname}, and this is my website. It was made using{' '}
-						<a href="https://github.com/withastro/astro" target="_blank" rel="nofollow"> Astro</a>,
-						a new way to build static sites. This is just an example template for you to modify.
+						<span>Hello!</span> I’m {nickname}, and this is my personal website. I am an R&D associate at 
+						{' '} <a href="https://www.ornl.gov/staff-profile/sreelekha-guggilam" target="_blank" rel="nofollow">ORNL</a>.
 					</p>
 					<p>
 						<a href="/about">Read more</a>
