--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,6 +1,6 @@
 <nav>
 	<a class="link" href="/">
-		<div class="monogram">Lekha</div>
+		<div class="monogram">SL</div>
 	</a>
 	<a class="link" href="/projects/"> Portfolio</a>
 	<a class="link" href="/about/"> About</a>
