--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -46,11 +46,17 @@ const nickname = 'Lekha';
 			</div>
 			<div class="bio wrapper">
 				<p>
-					I am an R&D Associate in the Geospatial Artificial Intelligence (GeoAI) group within the National Security 
-					and Sciences Directorate (NSSD) at Oak Ridge National Lab (ORNL). I completed my PhD in Computational 
-					Sciences from SUNY, University at Buffalo (UB), Institute of Computational Data Sciences (ICDS). My research 
-					is in the area of unsupervised anomaly detection and open-set classification for streaming data, knowledge 
-					and data distillation for neural networks.
+					I am a Research Associate in Machine Learning at the Oak Ridge National Laboratory, 
+					where I develop statistical methods for anomaly detection, probabilistic graphical models, 
+					and foundation models for geospatial analysis. My research as a member of the Geospatial Artificial 
+					Intelligence (GeoAI) group within the Geospatial Science and Human Security Division (GSHSD) of the 
+					National Security and Sciences Directorate (NSSD) focuses on developing novel 
+					algorithms to identify anomalies in a collection of evolving multivariate data streams. I 
+					received my doctorate in Computational Sciences from SUNY University of Buffalo (UB). I earned my 
+					Bachelor of Science in Mathematics from the Indian Statistical Institute in 2014 and my 
+					two Master of Science degrees in Biostatistics-Bioinformatics (2015) and Civil Engineering (Transportation 
+					Statistics) (2017) from UB. My dissertation was centered on anomaly detection in dynamic data, 
+					open-set classification, probabilistic techniques, and non-parametric mixture models.
 				</p>
 			</div>
 		</div>
