--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -41,7 +41,7 @@ const nickname = 'Lekha';
 				<img
 					width="1400"
 					height="350"
-					src="https://images.unsplash.com/photo-1581977012607-4091712d36f9?auto=format&fit=crop&w=1400&h=350&q=75"
+					src="Images/ai-artificial-intelligence-wave-lines-neural-network-purple-blue-and-green-light-isolated-on-black-background-in-concept-of-technology-vector.webp"
 				/>
 			</div>
 			<div class="bio wrapper">
