--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,7 +10,7 @@ const nickname = 'Lekha';
 
 <html lang="en">
 	<head>
-		<MainHead title="About | {nickname}" description="About {nickname}" />
+		<MainHead title="About | Lekha" description="About Lekha" />
 		<style>
 			.heroImg {
 				max-height: 24rem;
