--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -41,7 +41,7 @@ const nickname = 'Lekha';
 				<img
 					width="1400"
 					height="350"
-					src="/Users/lekhag/Documents/GitHub/sreelekh.github.io/Images/ai-artificial-intelligence-wave-lines-neural-network-purple-blue-and-green-light-isolated-on-black-background-in-concept-of-technology-vector.webp"
+					src="/assets/ai-artificial-intelligence-wave-lines-neural-network-purple-blue-and-green-light-isolated-on-black-background-in-concept-of-technology-vector.webp"
 				/>
 			</div>
 			<div class="bio wrapper">
