--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ const nickname = 'Lekha';
 	<head>
 		<MainHead
 			title={`${name}: Personal Site`}
-			description={`${name}: Statistician, Researcher, Shikamaru lover...`}
+			description={`${name}: Statistician, Researcher`}
 		/>
 		<style>
 			.wrapper {
