--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -209,8 +209,8 @@ const nickname = 'Lekha';
 				width="1600"
 				height="1131"
 				class="img"
-				src="https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?w=1200&q=75"
-				srcset="https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?w=1200&q=75 800w,https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?w=1200&q=75 1200w,https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?w=1600&q=75 1600w,https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?w=2400&q=75 2400w"
+				src="/assets/Lekha_photo.jpeg"
+				srcset="/assets/Lekha_photo.jpeg 800w,/assets/Lekha_photo.jpeg 1200w,/assets/Lekha_photo.jpeg 1600w,/assets/Lekha_photo.jpeg 2400w"
 				sizes="(max-width: 800px) 800px, (max-width: 1200px) 1200px, (max-width: 1600px) 1600px, (max-width: 2400px) 2400px, 1200px"
 			/>
 			<div class="gradient"></div>
