--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,6 +6,8 @@ const nickname = 'Lekha';
 
 <footer>
 	&copy; {currentYear} {name}
+	<small class="byline"> Correspondence </small>
+	<small class="byline"> Email: guggilams@ornl.gov </small>
 	<small class="byline">🚀 Built by Astro</small>
 </footer>
 <style>
