--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -222,11 +222,14 @@ const nickname = 'Lekha';
 				<div class="section">
 					<h3 class="sectionTitle">About me</h3>
 					<p class="bio">
-						<span>Hello!</span> I’m {nickname}, and this is my personal website. I am an R&D associate at 
+						<span>Hello!</span> I’m am an R&D associate at 
 						{' '} <a href="https://www.ornl.gov/staff-profile/sreelekha-guggilam" target="_blank" rel="nofollow">ORNL</a>.
 					</p>
 					<p>
 						<a href="/about">Read more</a>
+					</p>
+					<p>
+						<a href="/publications">Publications</a>
 					</p>
 				</div>
 			</div>
