--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -228,9 +228,14 @@ const nickname = 'Lekha';
 					<p>
 						<a href="/about">Read more</a>
 					</p>
-					<p>
-						<a href="/publications">Publications</a>
-					</p>
+				</div>
+				<div class="section">
+				<h3 class="sectionTitle"> Select Publications</h3>
+					<ul>
+						<li><a href="https://link.springer.com/chapter/10.1007/978-3-031-08751-6_10">Guggilam, Sreelekha, Varun Chandola, and Abani K. Patra. "Classifying Anomalous Members in a Collection of Multivariate Time Series Data Using Large Deviations Principle: An Application to COVID-19 Data." Computational Science–ICCS 2022: 22nd International Conference, London, UK, June 21–23, 2022, Proceedings, Part I. Cham: Springer International Publishing, 2022.</a></li>
+						<li><a href="/posts/post-2/">Post 2</a></li>
+						<li><a href="/posts/post-3/">Post 3</a></li>
+					</ul>
 				</div>
 			</div>
 		</main>
