--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -233,7 +233,7 @@ const nickname = 'Lekha';
 				<h3 class="sectionTitle"> Select Publications</h3>
 					<ul>
 						<li><a href="https://link.springer.com/chapter/10.1007/978-3-031-08751-6_10">Guggilam, Sreelekha, Varun Chandola, and Abani K. Patra. "Classifying Anomalous Members in a Collection of Multivariate Time Series Data Using Large Deviations Principle: An Application to COVID-19 Data." Computational Science–ICCS 2022: 22nd International Conference, London, UK, June 21–23, 2022, Proceedings, Part I. Cham: Springer International Publishing, 2022.</a></li>
-						<li><a href="/posts/post-2/">Post 2</a></li>
+						<li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sam.11552">Guggilam, Sreelekha, Varun Chandola, and Abani Patra. "Tracking clusters and anomalies in evolving data streams." Statistical Analysis and Data Mining: The ASA Data Science Journal 15.2 (2022): 156-178.</a></li>
 						<li><a href="/posts/post-3/">Post 3</a></li>
 					</ul>
 				</div>
