--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -209,6 +209,7 @@ const nickname = 'Lekha';
 			<div class="gradient2"></div>
 			<div class="overlay">
 				<h1 class="title">
+					{name}
 				</h1>
 				<div class="roles">
 					<span class="role">Statistician <span class="invert"> Statistician</span></span>
@@ -217,7 +218,7 @@ const nickname = 'Lekha';
 			</div>
 		</header>
 		<main class="wrapper">
-			<div class="grid">
+			
 				<div class="section">
 					<h3 class="sectionTitle">About me</h3>
 					<p class="bio">
@@ -231,7 +232,7 @@ const nickname = 'Lekha';
 				<div class="section">
 				<h3 class="sectionTitle"> Select Publications</h3>
 				</div>
-			</div>
+			
 		</main>
 		<Footer />
 	</body>
