--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -231,6 +231,16 @@ const nickname = 'Lekha';
 				</div>
 				<div class="section">
 				<h3 class="sectionTitle"> Select Publications</h3>
+					<ul>
+						<li><a href="https://link.springer.com/chapter/10.1007/978-3-031-08751-6_10">Guggilam, Sreelekha, Varun Chandola, and Abani K. Patra. "Classifying Anomalous Members in a Collection of Multivariate Time Series Data Using Large Deviations Principle: An Application to COVID-19 Data." Computational Science–ICCS 2022: 22nd International Conference, London, UK, June 21–23, 2022, Proceedings, Part I. Cham: Springer International Publishing, 2022.</a></li>
+						<li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sam.11552">Guggilam, Sreelekha, Varun Chandola, and Abani Patra. "Tracking clusters and anomalies in evolving data streams." Statistical Analysis and Data Mining: The ASA Data Science Journal 15.2 (2022): 156-178.</a></li>
+						<li><a href="https://www.proquest.com/openview/1b59b82f095f121765787569d1f70f5d/1?pq-origsite=gscholar&cbl=18750&diss=y">Guggilam, Sreelekha. Non-Parametric Probabilistic Anomaly Detection in Evolving Data: Applications to Time Series. Diss. State University of New York at Buffalo, 2022.</a></li>
+						<li><a href="https://arxiv.org/abs/2109.13698">Guggilam, Sreelekha, Varun Chandola, and Abani Patra. "Anomaly detection for high-dimensional data using large deviations principle." arXiv preprint arXiv:2109.13698 (2021).</a></li>
+						<li><a href="https://arxiv.org/abs/1905.12150">Guggilam, Sreelekha, et al. "Bayesian anomaly detection using extreme value theory." arXiv preprint arXiv:1905.12150 (2019).</a></li>
+						<li><a href="https://link.springer.com/chapter/10.1007/978-3-030-22747-0_4">Guggilam, Sreelekha, et al. "Integrated clustering and anomaly detection (incad) for streaming data." Computational Science–ICCS 2019: 19th International Conference, Faro, Portugal, June 12–14, 2019, Proceedings, Part IV 19. Springer International Publishing, 2019.</a></li>
+						<li><a href="/posts/post-3/">Post 3</a></li>
+						<li><a href="/posts/post-3/">Post 3</a></li>
+					</ul>
 				</div>
 			
 		</main>
