--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -222,8 +222,18 @@ const nickname = 'Lekha';
 				<div class="section">
 					<h3 class="sectionTitle">About me</h3>
 					<p class="bio">
-						<span>Hello!</span> I’m am an R&D associate at 
-						{' '} <a href="https://www.ornl.gov/staff-profile/sreelekha-guggilam" target="_blank" rel="nofollow">ORNL</a>.
+						<span>Hello!</span> 
+						I am a Research Associate in Machine Learning at the {' '} <a href="https://www.ornl.gov/staff-profile/sreelekha-guggilam" target="_blank" rel="nofollow">Oak Ridge National Laboratory</a>, 
+						where I develop statistical methods for anomaly detection, probabilistic graphical models, 
+						and foundation models for geospatial analysis. My research as a member of the Geospatial Artificial 
+						Intelligence (GeoAI) group within the Geospatial Science and Human Security Division (GSHSD) of the 
+						National Security and Sciences Directorate (NSSD) focuses on developing novel 
+						algorithms to identify anomalies in a collection of evolving multivariate data streams. I 
+						received my doctorate in Computational Sciences from SUNY University of Buffalo (UB). I earned my 
+						Bachelor of Science in Mathematics from the Indian Statistical Institute in 2014 and my 
+						two Master of Science degrees in Biostatistics-Bioinformatics (2015) and Civil Engineering (Transportation 
+						Statistics) (2017) from UB. My dissertation was centered on anomaly detection in dynamic data, 
+						open-set classification, probabilistic techniques, and non-parametric mixture models.
 					</p>
 					<p>
 						<a href="/about">Read more</a>
