--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -229,14 +229,13 @@ const nickname = 'Lekha';
 						Intelligence (GeoAI) group within the Geospatial Science and Human Security Division (GSHSD) of the 
 						National Security and Sciences Directorate (NSSD) focuses on developing novel 
 						algorithms to identify anomalies in a collection of evolving multivariate data streams. I 
-						received my doctorate in Computational Sciences from SUNY University of Buffalo (UB). I earned my 
+						received my doctorate in Computational Sciences from <a href="https://www.buffalo.edu" target="_blank" rel="nofollow">SUNY University of Buffalo (UB)</a>
+						 under the supervision of <a href="https://ubdsgroup.github.io/team/varun-chandola/" target="_blank" rel="nofollow">Dr. Varun Chandola</a> and 
+						 <a href="https://engineering.tufts.edu/cs/people/faculty/abani-patra" target="_blank" rel="nofollow">Dr. Abani Patra</>. I earned my 
 						Bachelor of Science in Mathematics from the Indian Statistical Institute in 2014 and my 
 						two Master of Science degrees in Biostatistics-Bioinformatics (2015) and Civil Engineering (Transportation 
 						Statistics) (2017) from UB. My dissertation was centered on anomaly detection in dynamic data, 
 						open-set classification, probabilistic techniques, and non-parametric mixture models.
-					</p>
-					<p>
-						<a href="/about">Read more</a>
 					</p>
 				</div>
 				<div class="section">
