--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -229,7 +229,7 @@ const nickname = 'Lekha';
 						Intelligence (GeoAI) group within the Geospatial Science and Human Security Division (GSHSD) of the 
 						National Security and Sciences Directorate (NSSD) focuses on developing novel 
 						algorithms to identify anomalies in a collection of evolving multivariate data streams. I 
-						received my doctorate in Computational Sciences from <a href="https://www.buffalo.edu" target="_blank" rel="nofollow">SUNY University of Buffalo (UB)</a>
+						received my doctorate in Computational Sciences from <a href="https://www.buffalo.edu/ai-data-science.html" target="_blank" rel="nofollow">SUNY University of Buffalo (UB)</a>
 						 under the supervision of <a href="https://ubdsgroup.github.io/team/varun-chandola/" target="_blank" rel="nofollow">Dr. Varun Chandola</a> and 
 						 <a href="https://engineering.tufts.edu/cs/people/faculty/abani-patra" target="_blank" rel="nofollow">Dr. Abani Patra</a>. I earned my 
 						Bachelor of Science in Mathematics from the Indian Statistical Institute in 2014 and my 
