--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -240,7 +240,7 @@ const nickname = 'Lekha';
 						received my doctorate in Computational Sciences from <a href="https://www.buffalo.edu/ai-data-science.html" target="_blank" rel="nofollow">SUNY University of Buffalo (UB)</a>
 						 under the supervision of <a href="https://ubdsgroup.github.io/team/varun-chandola/" target="_blank" rel="nofollow">Dr. Varun Chandola</a> and 
 						 <a href="https://engineering.tufts.edu/cs/people/faculty/abani-patra" target="_blank" rel="nofollow">Dr. Abani Patra</a>. I earned my 
-						Bachelor of Science in Mathematics from the Indian Statistical Institute in 2014 and my 
+						Bachelor of Science in Mathematics from the <a href="https://www.isibang.ac.in" target="_blank" rel="nofollow">Indian Statistical Institute</a> in 2014 and my 
 						two Master of Science degrees in Biostatistics-Bioinformatics (2015) and Civil Engineering (Transportation 
 						Statistics) (2017) from UB. My dissertation was centered on anomaly detection in dynamic data, 
 						open-set classification, probabilistic techniques, and non-parametric mixture models.
