--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -205,6 +205,7 @@ const nickname = 'Lekha';
 	<body>
 		<Nav />
 		<header class="hero">
+		<!-- ##COMMENTED OUT
 			<img
 				width="1600"
 				height="1131"
@@ -213,6 +214,7 @@ const nickname = 'Lekha';
 				srcset="/assets/Lekha_photo.jpeg 800w,/assets/Lekha_photo.jpeg 1200w,/assets/Lekha_photo.jpeg 1600w,/assets/Lekha_photo.jpeg 2400w"
 				sizes="(max-width: 800px) 800px, (max-width: 1200px) 1200px, (max-width: 1600px) 1600px, (max-width: 2400px) 2400px, 1200px"
 			/>
+		-->
 			<div class="gradient"></div>
 			<div class="gradient2"></div>
 			<div class="overlay">
