--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -251,6 +251,7 @@ const nickname = 'Lekha';
 				<div class="section">
 				<h3 class="sectionTitle"> Publications</h3>
 					<ul>
+						<li><a href="https://arxiv.org/abs/2303.00954"> Guggilam, Sreelekha, et al. Large Deviations for Accelerating Neural Networks Training. arXiv, 2023, https://doi.org10.48550/ARXIV.2303.00954.</a></li>
 						<li><a href="https://link.springer.com/chapter/10.1007/978-3-031-08751-6_10">Guggilam, Sreelekha, Varun Chandola, and Abani K. Patra. "Classifying Anomalous Members in a Collection of Multivariate Time Series Data Using Large Deviations Principle: An Application to COVID-19 Data." Computational Science–ICCS 2022: 22nd International Conference, London, UK, June 21–23, 2022, Proceedings, Part I. Cham: Springer International Publishing, 2022.</a></li>
 						<li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sam.11552">Guggilam, Sreelekha, Varun Chandola, and Abani Patra. "Tracking clusters and anomalies in evolving data streams." Statistical Analysis and Data Mining: The ASA Data Science Journal 15.2 (2022): 156-178.</a></li>
 						<li><a href="https://www.proquest.com/openview/1b59b82f095f121765787569d1f70f5d/1?pq-origsite=gscholar&cbl=18750&diss=y">Guggilam, Sreelekha. Non-Parametric Probabilistic Anomaly Detection in Evolving Data: Applications to Time Series. Diss. State University of New York at Buffalo, 2022.</a></li>
