--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,7 +47,7 @@ const nickname = 'Lekha';
 
 			.gradient,
 			.gradient2 {
-				background-image: url('../public/assets/Background/three-ideal-scenarios-for-anomaly-detection-with-machine-learning-1568x882.jpg');
+				background-image: url('/assets/Lekha_photo.jpeg');
 				background-size: cover;
 				pointer-events: none;
 				mix-blend-mode: screen;
