update navigation links in main page

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,6 +1,18 @@
 <nav>
 	<a class="link" href="/">
-		<div class="monogram">SL</div>
+		<div>Lekha</div>
+	</a>
+	<a class="link" href="https://scholar.google.com/citations?hl=en&user=DwO_TeoAAAAJ">
+		<div>Scholar</div>
+	</a>
+	<a class="link" href="../../public/assets/CV/CV.pdf">
+		<div>CV</div>
+	</a>
+	<a class="link" href="https://sreelekh.github.io/about/">
+		<div>About</div>
+	</a>
+	<a class="link" href="https://sreelekh.github.io/projects/">
+		<div>Projects</div>
 	</a>
 	<div class="socials">
 		<a class="social" href="https://github.com/sreelekh">
@@ -12,6 +24,7 @@
 		</a>
 	</div>
 </nav>
+
 
 <style>
 	nav {
