--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -522,7 +522,7 @@ Machine Learning driven data strategy for enhancing Airbnb ecosystem</h2>
     <script src="vendors/swiper/swiper-bundle.min.js"></script>
     <script src="vendors/lodash/lodash.min.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
-    <script src="assets/js/theme.js"></script>
+    <!-- <script src="assets/js/theme.js"></script> -->
   </body>
 
 </html>
