--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,6 +17,13 @@ const nickname = 'Lekha';
 ---
 
 <html lang="en">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- ===============================================--><!--    Document Title--><!-- ===============================================-->
+    <title>Sreelekha Guggilam</title>
+
 	<head>
 		<MainHead
 			title={`${name}`}
