--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,14 +17,7 @@ const nickname = 'Lekha';
 ---
 
 <html lang="en">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- ===============================================--><!--    Document Title--><!-- ===============================================-->
-    <title>Sreelekha Guggilam</title>
-
-	<head>
+	<!-- <head>
 		<MainHead
 			title={`${name}`}
 			description={`${name}: Statistician, Researcher`}
@@ -208,7 +201,17 @@ const nickname = 'Lekha';
 				margin-top: 2em;
 			}
 		</style>
+	</head> -->
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- ===============================================-->
+		<!--    Document Title-->
+		<!-- ===============================================-->
+		<title>Sreelekha Guggilam</title>
 	</head>
+
 	<body>
 		<Nav />
 		<header class="hero">
