--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -202,15 +202,39 @@ const nickname = 'Lekha';
 			}
 		</style>
 	</head> -->
+---
+---
+
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+
 		<!-- ===============================================-->
 		<!--    Document Title-->
 		<!-- ===============================================-->
 		<title>Sreelekha Guggilam</title>
+
+		<!-- ===============================================-->
+		<!--    Favicons-->
+		<!-- ===============================================-->
+		<link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
+		<link rel="manifest" href="assets/img/favicons/manifest.json">
+		<meta name="msapplication-TileImage" content="assets/img/favicons/mstile-150x150.png">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<meta name="theme-color" content="#ffffff">
+
+		<!-- ===============================================-->
+		<!--    Stylesheets-->
+		<!-- ===============================================-->
+		<link rel="stylesheet" href="vendors/swiper/swiper-bundle.min.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&amp;family=Rubik:ital,wght@0,300..900;1,300..900&amp;display=swap" rel="stylesheet">
+		<link href="assets/css/theme.min.css" rel="stylesheet" id="style-default">
+		<link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
 	</head>
+
 
 	<body>
 		<Nav />
