--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,252 +15,38 @@ const nickname = 'Lekha';
 // Full Astro Component Syntax:
 // https://docs.astro.build/core-concepts/astro-components/
 ---
+<html data-bs-theme="light" lang="en-US" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<html lang="en">
-	<head>
-		<MainHead
-			title={`${name}`}
-			description={`${name}: Statistician, Researcher`}
-		/>
-		<style>
-			.wrapper {
-				margin-top: 2em;
-				margin-bottom: 2em;
-			}
+    <!-- ===============================================-->
+    <!--    Document Title-->
+    <!-- ===============================================-->
+    <title>Sreelekha Guggilam</title>
 
-			.hero {
-				position: relative;
-				overflow: hidden;
-			}
+    <!-- ===============================================-->
+    <!--    Favicons-->
+    <!-- ===============================================-->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
+    <link rel="manifest" href="assets/img/favicons/manifest.json">
+    <meta name="msapplication-TileImage" content="assets/img/favicons/mstile-150x150.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="theme-color" content="#ffffff">
 
-			@media (min-width: 750px) {
-				.hero {
-					height: 45vw;
-				}
-			}
+    <!-- ===============================================-->
+    <!--    Stylesheets-->
+    <!-- ===============================================-->
+    <link rel="stylesheet" href="vendors/swiper/swiper-bundle.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&amp;family=Rubik:ital,wght@0,300..900;1,300..900&amp;display=swap" rel="stylesheet">
+    <link href="assets/css/theme.min.css" rel="stylesheet" id="style-default">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+  </head>
 
-			.img {
-				display: block;
-				width: 100%;
-				height: auto;
-			}
-
-			.gradient,
-			.gradient2 {
-				/* background-image: url('/assets/mesh-gradient.jpg'); */
-				background-size: cover;
-				pointer-events: none;
-				mix-blend-mode: screen;
-				width: 100%;
-				height: 100%;
-				position: absolute;
-				top: 0;
-				left: 0;
-				z-index: 2;
-			}
-
-			.gradient2 {
-				mix-blend-mode: multiply;
-				background-size: cover;
-			}
-
-			.overlay {
-				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
-				z-index: 10;
-				display: flex;
-				flex-direction: column;
-				align-items: flex-start;
-				justify-content: center;
-				padding-left: 2rem;
-			}
-
-			@media (min-width: 750px) {
-				.overlay {
-					padding-left: 4rem;
-				}
-			}
-
-			.title {
-				font-weight: 900;
-				font-size: var(--f-u6);
-				margin-bottom: 0.5rem;
-				margin-top: 0;
-			}
-
-			@media (min-width: 750px) {
-				.title {
-					font-size: var(--f-u12);
-				}
-			}
-
-			.grid {
-				display: grid;
-				grid-gap: 2rem;
-			}
-
-			@media (min-width: 1200px) {
-				.grid {
-					grid-template-columns: 2fr 1fr;
-				}
-			}
-
-			.sectionTitle {
-				font-weight: 700;
-				font-size: var(--f-u8);
-				margin-top: 4rem;
-				margin-bottom: 2rem;
-			}
-
-			.roles {
-				display: flex;
-				flex-wrap: wrap;
-				gap: 0.5em;
-				font-size: var(--f-d1);
-			}
-
-			.role {
-				position: relative;
-				display: inline-block;
-				white-space: nowrap;
-				font-weight: 900;
-				color: var(--t-bg);
-				background-color: var(--t-fg);
-				padding: 0.25em 0.5em;
-				z-index: 2;
-			}
-
-			@media (min-width: 750px) {
-				.role {
-					font-size: var(--f-u3);
-				}
-			}
-
-			.role:nth-of-type(1) .invert {
-				background-color: var(--c-pink);
-			}
-
-			.role:nth-of-type(2) .invert {
-				background-color: var(--c-blue);
-			}
-
-			.role:nth-of-type(3) .invert {
-				background-color: var(--c-green);
-			}
-
-			.role:hover .invert {
-				clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
-			}
-
-			.invert {
-				position: absolute;
-				color: var(--t-fg);
-				display: flex;
-				align-items: center;
-				justify-content: center;
-				width: 100%;
-				height: 100%;
-				top: 0;
-				left: 0;
-				pointer-events: none;
-				clip-path: polygon(0% 100%, 100% 100%, 100% 200%, 0% 200%);
-				transition: clip-path cubic-bezier(0.4, 0, 0.5, 1) 150ms;
-			}
-
-			.desc {
-				font-size: var(--f-u1);
-				margin-top: 1.5rem;
-				margin-bottom: 0;
-			}
-
-			.subtitle {
-				display: block;
-				font-weight: 400;
-				font-size: var(--f-d6);
-				letter-spacing: -0.0625em;
-			}
-
-			.bio {
-				line-height: 2;
-				margin-bottom: 2rem;
-			}
-
-			.bio > span:first-of-type {
-				line-height: 1;
-				margin-bottom: 0.5em;
-				display: block;
-				font-weight: 700;
-				font-size: var(--f-u4);
-			}
-
-			.buttonContainer {
-				text-align: center;
-				margin-top: 2em;
-			}
-		</style>
-	</head>
-	<body>
-		<Nav />
-		<header class="hero">
-		<!-- ##COMMENTED OUT
-			<img
-				width="1600"
-				height="1131"
-				class="img"
-				src="/assets/Lekha_photo.jpeg"
-				srcset="/assets/Lekha_photo.jpeg 800w,/assets/Lekha_photo.jpeg 1200w,/assets/Lekha_photo.jpeg 1600w,/assets/Lekha_photo.jpeg 2400w"
-				sizes="(max-width: 800px) 800px, (max-width: 1200px) 1200px, (max-width: 1600px) 1600px, (max-width: 2400px) 2400px, 1200px"
-			/> -->		
-			<div class="gradient"></div>
-			<div class="gradient2"></div>
-			<div class="overlay">
-				<h1 class="title">
-					{name}
-				</h1>
-				<div class="roles">
-					<span class="role">Statistician <span class="invert"> Statistician</span></span>
-					<span class="role">👩‍💻 Researcher <span class="invert">🎤👩‍💻 Researcher</span></span>
-				</div>
-			</div>
-		</header>
-		<main class="wrapper">
-			
-				<div class="section">
-					<h3 class="sectionTitle">About me</h3>
-					<p class="bio">
-						<span>Hello!</span> 
-						I am a Research Associate in Machine Learning at the {' '} <a href="https://www.ornl.gov/staff-profile/sreelekha-guggilam" target="_blank" rel="nofollow">Oak Ridge National Laboratory</a>, 
-						where I develop statistical methods for anomaly detection, probabilistic graphical models, 
-						and foundation models for geospatial analysis. My research as a member of the Geospatial Artificial 
-						Intelligence (GeoAI) group within the Geospatial Science and Human Security Division (GSHSD) of the 
-						National Security and Sciences Directorate (NSSD) focuses on developing novel 
-						algorithms to identify anomalies in a collection of evolving multivariate data streams. I 
-						received my doctorate in Computational Sciences from <a href="https://www.buffalo.edu/ai-data-science.html" target="_blank" rel="nofollow">SUNY University of Buffalo (UB)</a>
-						 under the supervision of <a href="https://ubdsgroup.github.io/team/varun-chandola/" target="_blank" rel="nofollow">Dr. Varun Chandola</a> and 
-						 <a href="https://engineering.tufts.edu/cs/people/faculty/abani-patra" target="_blank" rel="nofollow">Dr. Abani Patra</a>. I earned my 
-						Bachelor of Science in Mathematics from the <a href="https://www.isibang.ac.in" target="_blank" rel="nofollow">Indian Statistical Institute</a> in 2014 and my 
-						two Master of Science degrees in Biostatistics-Bioinformatics (2015) and Civil Engineering (Transportation 
-						Statistics) (2017) from UB. My dissertation was centered on anomaly detection in dynamic data, 
-						open-set classification, probabilistic techniques, and non-parametric mixture models.
-					</p>
-				</div>
-				<div class="section">
-				<h3 class="sectionTitle"> Publications</h3>
-					<ul>
-						<li><a href="https://arxiv.org/abs/2303.00954"> Guggilam, Sreelekha, et al. Large Deviations for Accelerating Neural Networks Training. arXiv, 2023, https://doi.org10.48550/ARXIV.2303.00954.</a></li>
-						<li><a href="https://link.springer.com/chapter/10.1007/978-3-031-08751-6_10">Guggilam, Sreelekha, Varun Chandola, and Abani K. Patra. "Classifying Anomalous Members in a Collection of Multivariate Time Series Data Using Large Deviations Principle: An Application to COVID-19 Data." Computational Science–ICCS 2022: 22nd International Conference, London, UK, June 21–23, 2022, Proceedings, Part I. Cham: Springer International Publishing, 2022.</a></li>
-						<li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sam.11552">Guggilam, Sreelekha, Varun Chandola, and Abani Patra. "Tracking clusters and anomalies in evolving data streams." Statistical Analysis and Data Mining: The ASA Data Science Journal 15.2 (2022): 156-178.</a></li>
-						<li><a href="https://www.proquest.com/openview/1b59b82f095f121765787569d1f70f5d/1?pq-origsite=gscholar&cbl=18750&diss=y">Guggilam, Sreelekha. Non-Parametric Probabilistic Anomaly Detection in Evolving Data: Applications to Time Series. Diss. State University of New York at Buffalo, 2022.</a></li>
-						<li><a href="https://arxiv.org/abs/2109.13698">Guggilam, Sreelekha, Varun Chandola, and Abani Patra. "Anomaly detection for high-dimensional data using large deviations principle." arXiv preprint arXiv:2109.13698 (2021).</a></li>
-						<li><a href="https://arxiv.org/abs/1905.12150">Guggilam, Sreelekha, et al. "Bayesian anomaly detection using extreme value theory." arXiv preprint arXiv:1905.12150 (2019).</a></li>
-						<li><a href="https://link.springer.com/chapter/10.1007/978-3-030-22747-0_4">Guggilam, Sreelekha, et al. "Integrated clustering and anomaly detection (incad) for streaming data." Computational Science–ICCS 2019: 19th International Conference, Faro, Portugal, June 12–14, 2019, Proceedings, Part IV 19. Springer International Publishing, 2019.</a></li>
-					</ul>
-				</div>
-			
-		</main>
-		<Footer />
-	</body>
+  <body>
+    <!-- Content of the page goes here -->
+  </body>
 </html>
